# gladier-xpcs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  check_status.py  client.py  clients.py  flow_def.py  flow_defs.py  flow_eigen.ipynb  gladier.cfg  manage.py  manifest_reprocessing.py  payload.py  portal-requirements.txt  pyproject.toml  pytest.ini  reprocessing.py  requirements-portal.txt  requirements-tools.txt  requirements.txt  setup.cfg  setup.py  start.py  test_client.ipynb  xpcs_online_boost_client.py
.github/workflows/: docker-publish.yml  singularity_build.yml  test_flow.yml  unit_tests.yml
docs/: conf.py  map.md
flow_defs/: corr_basic_flow.py  corr_full_flow.py  qmap_basic_flow.py
gladier_xpcs/: client_corr.py  client_online_corr.py  client_rep.py  client_reprocess.py  collections.py  config.py  deployments.py  flow_base.py  flow_gpu.py  flow_online.py  flow_reprocess.py  log.py  online_processing.py  reprocessing.py
gladier_xpcs/flows/: README.md  __init__.py  container_flow_base.py  down_eigen.asl.json  eigen.asl.json  flow_boost.py  flow_boost_batch.py  flow_eigen.py  flow_gpu.py  flow_online.py  flow_reprocess.py  reprocess.py
gladier_xpcs/nb_utils/: metadata.py
gladier_xpcs/reprocessing_tools/: apply_qmap.py  publish_preparation.py  transfer_qmap.py  transfer_to_proc.py
gladier_xpcs/tools/: README.md  __init__.py  acquire_nodes.py  apply_qmap.py  batch_corr_setup.py  boost_corr_runtime.py  corr.py  corr_gpu.py  custom_pilot.py  eigen_corr.py  gather_xpcs_metadata.py  manifest_reprocessing.py  multitau_gpu.py  plot.py  pre_publish.py  publish.py  result_transfer.py  source_transfer.py  source_transfer_cleanup.py  transfer_from_clutch_to_theta.py  transfer_qmap.py  transfer_to_clutch.py  warm_nodes.py  xpcs_boost_corr.py  xpcs_boost_solver.py  xpcs_metadata.py  xpcs_plots.py
notebooks/: README.md  metadata.py  nb_plot.py  remote.py  requirements.txt  search_big_query.ipynb  search_example.ipynb  search_keys.ipynb  search_milli.ipynb  search_remote.ipynb  search_simple.ipynb  test_client.ipynb
old_automate_client/: automate_flows.py  client.py  what_to_display_automate.txt
old_automate_client/evaluation/: Evaluation.ipynb  plot.ipynb
old_automate_client/flows/: xpcs.ipynb
old_automate_client/tests/: conftest.py  integration.py  test_client.py  test_xpcs_metadata.py
recipes/: Dockerfile  eigen.recipe
scripts/: README.md  automate_wait.py  automate_xpcs.py  batch_status.py  client.py  crawl_clutch.py  dm_gladier_xpcs.py  dm_gladier_xpcs_01.py  dm_gladier_xpcs_pre_01.sh  get_run_status.py  get_status.py  online-processing.md  payload.py  raf_dev.py  raf_dev_cooley.py  reprocessing.py  rigaku_job_test_0327_1.sh  small.sh  workflow-xpcs8-03-automate.py  xpcs_batch_client.py  xpcs_corr_client.py  xpcs_corr_gpu_client.py  xpcs_crawl_portal.py  xpcs_online_boost_client.py  xpcs_online_boost_client_confclient.py  xpcs_online_eigen_client.py  xpcs_reproc_client.py  xpcs_reprocess.py  xpcs_test.py  xpcs_test.sh
scripts/dm/: automate_wait.py  checkStatus.py  dm_gladier_xpcs_gpu_online_boost_01.sh  dm_gladier_xpcs_gpu_pre_01.sh  (+17 more)
tests/: conftest.py  test_flow.py  test_gather_metadata.py  test_get_status.py
tools/: funcx_functions.py  update_xpcs.py  update_xpcs_metadata.py  xpcs_metadata.py  xpcs_plots.py  xpcs_qc.py
xpcs_client/: manifest_reprocessing.py  reprocessing.py
xpcs_portal/: README.md
(+111 files in other folders)
